<resources>
    <string name="app_name">Record laps</string>
    <string name="gps_message">You must turn on GPS to use the app.</string>
    <string name="enable_gps">Enable GPS</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="mark_start_location">Mark start location</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="distance_view">Nothing</string>
    <string name="start_counting_rounds">Start counting rounds</string>
    <string name="pause_counting_rounds">Pause counting rounds</string>
    <string name="reset_rounds">Reset rounds</string>
    <string name="Initial_round_number">199</string>
    <string name="Initial_distance">00000 m.</string>
    <string name="Dash">-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">time</string>
    <string name="distance">distance</string>
    <string name="speed">speed</string>
    <string name="total">total</string>
    <string name="last_lap">last lap</string>
    <string name="best_lap">best lap</string>
    <string name="round">R</string>
    <string name="build_format">build: %1$s</string>

</resources>