<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rounds">

    <!-- mijn input:-->

    <Button
        android:id="@+id/start_receive_locations_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:text="@string/start_location_updates_button_text"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mark_start_location_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mark_start_location"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_receive_locations_btn" />

    <Button
        android:id="@+id/start_counting_rounds_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/start_counting_rounds"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mark_start_location_btn" />

    <Button
        android:id="@+id/zero_rounds_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reset_rounds"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_counting_rounds_btn" />


    <TextView
        android:id="@+id/marking_point_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_border"
        android:text="@string/Dash"
        android:textSize="20sp"
        android:textColor="@color/text_main"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_position_text_view" />

    <TextView
        android:id="@+id/current_position_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_border"
        android:text="@string/Dash"
        android:textColor="@color/text_main"
        android:textSize="20sp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totals_row" />

    <TextView
        android:id="@+id/round_count_text_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/circle_grey"
        android:gravity="center"
        android:text="@string/Initial_round_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="64sp"
        android:textColor="@color/text_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero_rounds_btn" />

    <TextView
        android:id="@+id/distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_border"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/Initial_distance"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        android:textColor="@color/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/rounds_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/header_bg"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_count_text_view">

        <Button
            android:id="@+id/sort_round"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/round"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawableEnd="@drawable/ic_sort_both"
            android:drawablePadding="2dp" />

        <Button
            android:id="@+id/sort_time"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/time"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawableEnd="@drawable/ic_sort_both"
            android:drawablePadding="2dp" />

        <Button
            android:id="@+id/sort_distance"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableEnd="@drawable/ic_sort_both"
            android:drawablePadding="2dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/distance"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/sort_speed"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/speed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawableEnd="@drawable/ic_sort_both"
            android:drawablePadding="2dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rounds_recycler_view"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_border"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rounds_header" />

    <LinearLayout
        android:id="@+id/totals_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_border"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rounds_recycler_view">

        <TextView
            android:id="@+id/total_label"
            style="@style/TableCellText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/total" />

        <TextView
            android:id="@+id/total_time_tv"
            style="@style/TableCellText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="00:00" />

        <TextView
            android:id="@+id/total_distance_tv"
            style="@style/TableCellText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="0 m" />

        <TextView
            android:id="@+id/total_speed_tv"
            style="@style/TableCellText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="0.00" />
    </LinearLayout>


    <TextView
        android:id="@+id/build_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="v0"
        android:textSize="10sp"
        android:textColor="@color/text_secondary"
        android:alpha="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>